# storm-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml
.github/workflows/: ci.yml
fixtures/: seed_categories.sql
migrations/: 001_init.sql  002_agent_station_link.sql  003_protect_suadmin.sql
src/: app.rs  lib.rs  main.rs
src/db/: connection.rs  mod.rs
src/errors/: mod.rs
src/handlers/: agent_handler.rs  auth_handler.rs  card_handler.rs  category_handler.rs  commission_handler.rs  commission_tier_handler.rs  consumption_handler.rs  customer_handler.rs  health_handler.rs  mod.rs  price_handler.rs  transaction_handler.rs  user_handler.rs
src/models/: agent.rs  card.rs  category.rs  commission.rs  commission_tier.rs  consumption.rs  customer.rs  mod.rs  pagination.rs  price.rs  transaction.rs  user.rs
src/routes/: agents.rs  auth.rs  cards.rs  categories.rs  commission_tiers.rs  commissions.rs  consumptions.rs  customers.rs  health.rs  mod.rs  prices.rs  transactions.rs  users.rs
src/services/: agent_service.rs  auth_service.rs  card_service.rs  category_service.rs  commission_service.rs  commission_tier_service.rs  consumption_service.rs  customer_service.rs  mod.rs  price_service.rs  transaction_service.rs  user_service.rs
src/state/: app_state.rs  mod.rs
src/utils/: cache.rs  client_code.rs  mod.rs  password.rs
tests/common/: app.rs  auth.rs  body.rs  mod.rs  redis.rs  seed.rs  state.rs  test_app.rs
tests/e2e/: cards_categories.rs  customers_agents.rs  infra_auth.rs  main.rs  pricing.rs  transactions.rs
tests/integration/: agent.rs  auth_endpoint.rs  auth_middleware.rs  cache.rs  card.rs  (+12 more)
(+6 files in other folders)
